# DeltaForce_Auto_Video_Cut

./: .gitignore  README.md  build_release.bat  clipper.py  config.py  detector.py  main.py  pyproject.toml  requirements.txt
UI_interface/: README.md  banner_widget.py  main_window.py  run_ui.py  video_processor.py  video_saver.py  video_thumbnail.py  video_worker.py
code/: clipper.py  config.py  detector.py  main.py
match_templates/: README.md
