[project]
name = "deltaforce-auto-video-cut"
version = "0.1.0"
package-mode = false
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.8.0)",
    "numpy (>=1.24.0)",
    "ffmpeg-python (>=0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
